--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gh-pages-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nurpyth.github.io/gh-pages-static/"
+  "homepage": "https://nurpyth.github.io/gh-pages-static/",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
   "eslintConfig": {
     "extends": [
       "react-app",
